# VulkanXMRMiner

./: CMakeLists.txt  README.md
spirv/: cn0.spv  cn1_hm16.spv  cn1_hm8.spv  cn1_hmV716.spv  cn1_hmV78.spv  cn1_lm16.spv  cn1_lm8.spv  cn1_lmV716.spv  cn1_lmV78.spv  cn2.spv  cn3.spv  cn4.spv  cn5.spv  cn6.spv  cn7.spv  cn8.spv  cnrl16.spv  cnrl8.spv  cnrm16.spv  k12.spv  k12_nv.spv
src/: config.cpp  config.hpp  constants.hpp  httpConsole.cpp  httpConsole.hpp  k12Algo.S  k12CpuMiner.cpp  log.cpp  log.hpp  main.cpp  miner.cpp  miner.hpp  mvulkan.cpp  mvulkan.hpp  network.cpp  network.hpp  slow-hash.cpp  slow_hash.cpp  slow_hash.hpp  spirv.cpp  spirv.hpp
